fixed header-img width problem on safari

--- a/index.css
+++ b/index.css
@@ -5,16 +5,16 @@ body {
 #header {
   margin: 5px 10px;
   display: flex;
-  flex-flow: row nowrap;
+  flex-flow: row wrap;
   align-items: center;
   justify-content: space-between;
   max-width: 100%;
 }
 
-#header-menu {
+/* #header-menu {
   display: flex;
   flex-flow: row wrap;
-}
+} */
 
 #header-img {
   width: 250px;
@@ -49,13 +49,14 @@ main {
 
 h1 {
   font-size: 1.6em;
+  margin-top: 2em;
 }
 
 #form {
   display: flex;
   flex-direction: column;
   align-content: center;
-  width: 400px;
+  min-width: 300px;
 }
 
 #submit {
@@ -63,7 +64,6 @@ h1 {
   font-size: 1.1;
   font-weight: 500;
   margin: 0.9em auto;
-  width: 70%;
 }
 
 #features {
@@ -150,7 +150,7 @@ h4 {
 footer {
   max-width: 1000px;
   margin: auto;
-  padding-right: 10px;
+  padding-right: 20px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -171,7 +171,7 @@ footer {
   font-weight: 600;
 }
 
-@media only screen and (max-width: 700px) {
+@media only screen and (max-width: 750px) {
   #nav-bar ul {
     flex-direction: column;
   }
